--- a/Barbie.html
+++ b/Barbie.html
@@ -26,26 +26,26 @@
     <a href="http://www.mybarbiesite.net/collezione-anni-80/barbie-tropical-1985/" target="_blank">
       <img class="img-1"
         src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/096/838/original/barbie_tropical.jpg?1694553700"
-        alt=""/>
+        alt="Barbie Tropical 1985"/>
     </a>
 
     <div class="grid">
     <img
       src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/096/867/original/casabarbie.jpg?1694602231"
-      alt=""
+      alt="Barbie's home 80s"
       />
     <img
       src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/096/988/original/dreamkit.jpg?1694640485"
-      alt=""
+      alt="Barbie's kitchen 80s"
     
     />
     <img
       src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/096/869/original/cucinaDeiSogniBarbie.JPG?1694602638"
-      alt=""
+      alt="Barbie's kitchen 80s"
     />
     <img
       src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/096/868/original/bazaarBarbie.jpg?1694602277"
-      alt=""
+      alt="Barbie's Surf'n'Shop 80s"
       
     />
 
